challenge16/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: azaabar
spec:
  serviceName: mongodb-headless
  replicas: 3
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      volumes:
      - name: mongo-db
        emptyDir: {}
      containers:
      - name: mongodb
        image: mongo:7
        args:
          - "--bind_ip_all"
          - "--replSet"
          - "rs0"
          - "--wiredTigerCacheSizeGB"
          - "0.25"
        ports:
        - containerPort: 27017
        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 45
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 6
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        volumeMounts:
        - name: mongo-db
          mountPath: /data/db
        - name: mongo-data
          mountPath: /data/pvc
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 100Mi
