challenge16/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-headless
  namespace: azaabar
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
